fix on mobile

--- a/components/layout/stylesheets/index.styl
+++ b/components/layout/stylesheets/index.styl
@@ -371,27 +371,28 @@ html.wf-active body .markdown-text
   html
     width: 360px
     margin: 0px auto
-  body
+  html.wf-active body
     margin: 0px 10px
-  .map-app
-    width: 340px
-    .svg-building-class, .stacked-area-chart, .svg-graphs
+
+    .map-app
       width: 340px
-      margin: 0px
-    .graph-heading-container
-      margin-left: 0px
-    .brooklyn-svg-key
-      display: none
-    .svg-container
-      width: 340px
-      &.third-width
+      .svg-building-class, .stacked-area-chart, .svg-graphs
         width: 340px
+        margin: 0px
+      .graph-heading-container
+        margin-left: 0px
+      .brooklyn-svg-key
+        display: none
+      .svg-container
+        width: 340px
+        &.third-width
+          width: 340px
 
-  #mobile
-    display: block
+    #mobile
+      display: block
 
-  #main-layout-container        
-    width: 340px
-    margin-top: 20px
-  .graph-help-text
-    display: none
+    #main-layout-container        
+      width: 340px
+      margin-top: 20px
+    .graph-help-text
+      display: none
